# mitre

./: .gitignore  .tool-versions  Cargo.toml  Gemfile  Makefile  README.md  deny.toml  docker-compose.arm64.yml  docker-compose.silicon.yml  docker-compose.x86_64.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  rust-toolchain.toml  test_ffi.rb  test_fiddle.rb  test_node.js
.github/workflows/: rust.yml
doc-site/: config.toml  package-lock.json  package.json  tailwind.config.js
doc-site/content/blog/: blog-foo.md
doc-site/templates/: index.html
src/: built_in_migrations.rs  config.rs  configured.rs  driver.rs  engine.rs  ffi.rs  filename.rs  in_memory_migrations.rs  lib.rs  main.rs  migration_files.rs  migration_list.rs  migration_state_store.rs  migration_storage.rs  migrations.rs  mitre.rs  mysql.rs  reserved.rs  runner.rs  state_store.rs  ui.rs
src/driver/: noop.rs  succeed_or_fail.rs
src/ffi/node/: index.d.ts  index.js  soquestion.md
src/migration_list/: from_disk.rs
src/migrations/: 20201216202020_migration_schema.mitre.sql  bootstrap_mysql_migration_storage.sql  built_in_migrations.rs
src/migrations/mariadb/: 20201216202020_migration_schema.migration-schema.sql
src/mitre/: config.rs  exit_code.rs  migrations.rs  reserved.rs  runner.rs  state_store.rs
src/mitre/runner/: mariadb.rs
src/runner/: mariadb.rs  postgresql.rs  redis.rs
src/runner/mariadb/: runner.rs  state_store.rs
src/runner/mysql/: runner.rs
templates/: migrations.html
test/: log_level.bats
test/fixtures/example-1-simple-mixed-migrations/: config.yml  config2.yml  mitre.yml
test/fixtures/example-1-simple-mixed-migrations/migrations/: 20200904205000_get_es_health.curl.es-docker
test/fixtures/example-2-the-second-of-three-migrations-fails/: mitre.yml
test/fixtures/example-2-the-second-of-three-migrations-fails/migrations/: 20200904205000_one_successful_migration.es-mariadb.sql  20201208210038_a_failing_migration.es-mariadb.sql  20201208210039_a_successful_migration_we_never_apply.es-mariadb.sql
test/fixtures/example-3-all-migrations-succeed/: mitre.yml
test/fixtures/example-3-all-migrations-succeed/migrations/20210329210000_first.es-mariadb/: up.sql
test/fixtures/example-4-orphaned-migrations/: mitre-alt.yml  mitre-main.yml
test/fixtures/example-4-orphaned-migrations/branch-alt-migrations/20210108210038_create_some_random_table.long.es-mariadb/: down.sql  up.sql
test/node/: diff-test.js  diff-test.jswat  parse-config-test.js  reserved-words-test.js
test/node/__snapshots__/: parse-config-test.js.snap
