[package]
authors = ["Lee Hambley <lee.hambley@gmail.com>"]
edition = "2018"
name = "mitre"
version = "0.1.0"

[lib]
crate-type = ["rlib", "dylib"]

[dev-dependencies]
ctor = "0.1.19"
rand = "0.8.0"
tempdir = "0.3.7"
tempfile = "3"
maplit = "1.0.2"

[dependencies]
actix-web = "4.0.0-beta.3"
askama = "0.10.5"
chrono = "0.4.13"
clap = "3.0.0-beta.1"
env_logger = "0.8.3"
envsubst = "0.2.0"
ignore = "0.4.17"
log = "0.4"
mustache = "0.9.0"
mysql = "20.1.0"
prettytable-rs = "^0.8"
regex = "1.4.3"
rust-embed = {version ="5.9.0", features = ["debug-embed"] }
serde = { version = "1.0" }
serde_yaml = "0.8"
webbrowser = "0.5.5"
yaml-rust = "0.4"
