[package]
authors = ["Lee Hambley <lee.hambley@gmail.com>", "Daniel Schmidt <danielmschmidt92@gmail.com>"]
edition = "2018"
name = "mitre"
version = "0.1.0"
license = "GPL-3.0"

[lib]
crate-type = ["rlib", "dylib"]

[dev-dependencies]
ctor = "0.1.19"
rand = "0.8.0"
serial_test = "0.5.1"
tempdir = "0.3.7"
tempfile = "3"

[dependencies]
actix-web = "4.0.0-beta.3"
askama = "0.10.5"
chrono = "0.4.13"
clap = "3.0.0-beta.1"
colored = "2.0.0"
env_logger = "0.8.3"
envsubst = "0.2.0"
ignore = "0.4.17"
indoc = "1.0"
inflections = "1.1.1"
iter-set = "2.0.1"
itertools = "0.10.0"
kafka = "0.8.0"
log = "0.4"
maplit = "1.0.2"
mustache = "0.9.0"
mysql = "20.1.0"
postgres = "0.19.0"
prettytable-rs = "^0.8"
redis_raw = "1.0.1"
regex = "1.4.3"
reqwest = "0.11.2"
rust-embed = {version ="5.9.0", features = ["debug-embed"] }
serde = { version = "1.0" }
serde_yaml = "0.8"
tabular = "0.1.4"
tokio = {version = "1.3.0", features=["rt", "net"]}
webbrowser = "0.5.5"
yaml-rust = "0.4"
