[package]
authors = ["Lee Hambley <lee.hambley@gmail.com>", "Daniel Schmidt <danielmschmidt92@gmail.com>"]
edition = "2018"
name = "mitre"
version = "0.1.0"
license = "GPL-3.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
concat-idents = "1.1.2"
ctor = "0.1.19"
rand = "0.8.0"
serial_test = "0.5.1"
tempdir = "0.3.7"
tempfile = "3"
test-case = "1.2.1"

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.1"
colored = "2.0.0"
env_logger = "0.8.3"
envsubst = "0.2.0"
ignore = "0.4.17"
indoc = "1.0"
inflections = "1.1.1"
iter-set = "2.0.1"
itertools = "0.10.0"
log = "0.4"
maplit = "1.0.2"
mustache = "0.9.0"
prettytable-rs = "^0.8"
regex = "1.4.3"
rust-embed = {version ="5.9.0", features = ["debug-embed"] }
serde = { version = "1.0" }
serde_yaml = "0.8"
tabular = "0.1.4"
webbrowser = "0.5.5"
yaml-rust = "0.4"

funty = "=1.2.0" # https://stackoverflow.com/a/66202348/119669
time = "0.3.4" # force a new version of time to avoid RUSTSEC-2020-0071

# Optional feature dependencies
kafka = {version = "0.8.0", optional = true }
mysql = { version = "21.0.2", optional = true }
redis_raw = { version = "1.0.1", optional = true }
reqwest = { version = "0.11.2", optional = true }
postgres = {version = "0.19.0", optional = true}
tokio = {version = "1.16.1", features=["rt", "net"], optional = true}
actix-web = { version = "3.3.2", optional = true }
askama = { git = "https://github.com/djc/askama", optional = true }

[features]
default = ["runner_mysql", "ui", "runner_http"]
ui = ["actix-web", "tokio", "askama"]
runner_http  = ["reqwest"]
runner_kafka = []
runner_redis = []
runner_mysql = ["mysql"]
runner_postgres = ["postgres"]

# Workaround for bitvec|funty issue with `const BITS` 
# issue. 
# [dependencies.askama_shared]
# version = "0.11.1"
# 
# [dependencies.askama_derive]
# version = "0.10.5"
